marine_merchant_report_api_uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marine-merchant-report-api-uat
  namespace: dedepos-uat
  labels:
    app: marine-merchant-report-api-uat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marine-merchant-report-api-uat
  template:
    metadata:
      labels:
        app: marine-merchant-report-api-uat
    spec:
      containers:
      - name: marine-merchant-report-api-uat
        image: ghcr.io/suteetoe/dedemerchantapireport:sha-17c7566
        resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web-port
          protocol: TCP
        readinessProbe:
          httpGet:
            path: "/healthcheck"
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: "/healthcheck"
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 10
